# osx-scrobbler

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Info.plist  LICENSE  README.md  build-app.sh  com.osx-scrobbler.plist  install.sh  test-no-dock.sh  uninstall.sh
apple-music/src/: apple_music.rs  script_controller.rs
src/: config.rs  main.rs  media_monitor.rs  scrobbler.rs  text_cleanup.rs
src/scrobbler/: lastfm.rs  lastfm_auth.rs  listenbrainz.rs  mod.rs  traits.rs
src/ui/: app_dialog.rs  mod.rs  tray.rs
