[package]
name = "osx-scrobbler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Media monitoring
media-remote = "0.2.3"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System directories
dirs = "5.0"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = "0.4"

# For Last.fm API signing
md5 = "0.7"

# System tray and menu bar
tray-icon = "0.19"
winit = "0.30"

# Launch at login
auto-launch = "0.5"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
objc2-foundation = "0.2"
