[package]
name = "osx-scrobbler"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["OSX Scrobbler Contributors"]
description = "A lightweight macOS menu bar application that scrobbles your music to Last.fm and ListenBrainz"
repository = "https://github.com/yourusername/osx-scrobbler"
readme = "README.md"
keywords = ["scrobbler", "lastfm", "listenbrainz", "macos", "music"]
categories = ["multimedia", "gui"]

[dependencies]
# Media monitoring
media-remote = "0.2.3"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System directories
dirs = "5.0"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"
atty = "0.2"

# Time handling
chrono = "0.4"

# For Last.fm API signing
md5 = "0.7"

# Regex for text cleanup
regex = "1.10"

# System tray and menu bar
tray-icon = "0.19"
winit = "0.30"

# Launch at login
auto-launch = "0.5"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
objc2-foundation = "0.2"
